crates/nx-syntax/tests/fixtures/invalid/union-invalid-extends-clause.nx
type LoadState extends Base, Other =
  | idle
